--- a/src/main/resources/templates/connect/facebookConnected.html
+++ b/src/main/resources/templates/connect/facebookConnected.html
@@ -9,6 +9,7 @@
     You are now connected to your Facebook account.<br/>
     Click <a href="/">here</a> to see some entries from your Facebook feed.<br/>
     Click <a href="/redirect">here</a> to redirect.<br/>
+    Click <a href="/hello">here</a> to hello.<br/>
 </p>
 
 <p>If you would like to disconnect your Facebook account click this button:</p>
