--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -9,7 +9,7 @@
             <nav class="navbar navbar-default" role="navigation">
                 <div class="container">
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="#">OAuth social media demo</a>
+                        <a class="navbar-brand" href="#">Social Media Login</a>
                     </div>
                     <div>
                         <p th:unless="${currentUserConnection == null}" class="navbar-text navbar-right">
